2007-03-24  Gray Watson  <gray@outside.256.com>

	* Fixed bug where LOG_PNT_SEEN_COUNT set to 0 caused segfault in
	dmalloc_examine.  dmalloc_t was also not handling the setting
	appropriated.

	* Fixed bug with the checking of the MAX_FILE_LENGTH. 

2007-03-23  Gray Watson  <gray@outside.256.com>

	* Revamped the chunk.c tests for user_pnt space.  Added support
	for strnlen sizing.  Added better checking of non-exact user
	pointers.

	* Added dmalloc_verify_pnt_strsize to support strnlen size testing.

2007-03-22  Gray Watson  <gray@outside.256.com>

	* Added missing DMALLOC_FUNC_CHECK routines: atoi, atol, memmove

	* Added a number of special checks for DMALLOC_FUNC_CHECK stuff.

	* Fixed all of the DMALLOC_FUNC_CHECK arguments thanks to Nickolai.

2007-03-12  Gray Watson  <gray@outside.256.com>

	* Improved some documents after user feedback. Thanks Renny.

2007-02-08  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.5.0.

2006-03-27  Gray Watson  <gray@outside.256.com>

	* Fixed a problem with arg-check dmalloc code and check-fence.

2006-03-23  Gray Watson  <gray@outside.256.com>

	* Fixed a section of the manual about Cygwin thanks to Pierre.

	* Fixed a problem with Cygwin env parsing.  Thanks to Pierre and
	others.

2005-12-21  Gray Watson  <gray@outside.256.com>

	* Added a section on dumping core in the manual.

	* Added a number of regression tests for the arg-check code.

2005-12-19  Gray Watson  <gray@outside.256.com>

	* Fixed some problems with function argument checking and length
	arguments.  The library was not handling strncmp correctly for
	example.

	* Added handling of strndup function.

	* Added overlapping memory check for memcpy if memmove exists.

	* Added __FILE__ and __LINE__ arguments to function checks.  Not
	sure why they weren't there earlier.

2005-12-18  Gray Watson  <gray@outside.256.com>

	* Added patches to [hopefully] improve the building under Mac OSX.
	Thanks to Terry.
