@@ -10,7 +10,7 @@
 Version: Release 5.5.1 <br />
 <!-- fix the TITLE ^^^above^^^ too -->
 Last-Version: <a href="dmalloc-5.5.0.html">5.5.0</a> <br />
-Date: March 24, 2007
+Date: March 25, 2007
 </h4>
 
 <p>
@@ -30,7 +30,8 @@ Date: March 24, 2007
 <h3><a name="overview"> Overview </a></h3>
 
 <p> Bug fix release mostly to correct the bugs in 5.5.0 which broke
-the DMALLOC_FUNC_CHECK compile flag. </p>
+the DMALLOC_FUNC_CHECK compile flag.  Also improved some testing and
+discovered and fixed some user-pointer checking bugs. </p>
 
 <!--========================================================================-->
 
@@ -40,6 +41,9 @@ the DMALLOC_FUNC_CHECK compile flag. </p>
 
 <li> Improved the testing of user pointers used in DMALLOC_FUNC_CHECK
 function pointers. </li>
+
+<li> DMALLOC_FUNC_CHECK not checks atoi, atol, and memmove as
+well. </li>
 
 </ul>
 
@@ -112,6 +116,11 @@ compilation flag.  Added test code for this to not happen in the
 future. </li>
 
 <li> Fixed a small bug with the checking of the MAX_FILE_LENGTH. </li>
+
+<li> Fixed a bug where if LOG_PNT_SEEN_COUNT was set to 0,
+dmalloc_examine would segfault if used. </li>
+
+<li> Fixed some problems with strndup and strdup argument checking. </li>
 
 </ul>
 
