@@ -1,9 +1,11 @@
 -------------------------------------------------------------------------------
-$Id: NEWS,v 1.126 2007/03/25 03:16:06 gray Exp $
+$Id: NEWS,v 1.127 2007/03/25 18:57:31 gray Exp $
 -------------------------------------------------------------------------------
 
 Version 5.5.1 (3/24/2007):
 
+	* Fixed some problems with str[n]dup argument checking.
+	* Fixed bug where LOG_PNT_SEEN_COUNT=0 caused dmalloc_examine segfault.
 	* Fixed bug with the checking of the MAX_FILE_LENGTH. 
 	* Revamped the tests for user pointers. Added better support for sizes.
 	* Added dmalloc_verify_pnt_strsize to support strnlen size testing.
